--- a/views/google.ejs
+++ b/views/google.ejs
@@ -57,6 +57,23 @@
     </div>
   </div>
 
+      <!-- Modal-2 -->
+      <div class="modal" id="myOkModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Data fetched successfully</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>User data is available, everything is OK.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
   <div class="container">
     <h2>
@@ -85,7 +102,12 @@
           const myModal = new bootstrap.Modal(document.getElementById('myModal'));
           myModal.show();
       </script>
-    <% } %>
+    <% } else { %>
+      <script>
+          const myOkModal = new bootstrap.Modal(document.getElementById('myOkModal'));
+          myOkModal.show();
+      </script>
+    <% } %>    
 </body>
 
 </html>
